--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.1.0",
+        "@ckeditor/ckeditor5-vue": "^4.0.1",
         "autoprefixer": "10.4.5",
         "vee-validate": "^4.5.11",
         "vue-axios": "^3.4.1",
