--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "UI": "vue ui"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^34.1.0",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-spinners": "^1.2.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -21,12 +27,15 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "bootstrap": "^5.1.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "sass": "^1.54.2",
+    "sass-loader": "^13.0.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
