--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
     "sass": "^1.54.2",
-    "sass-loader": "^13.0.2"
+    "sass-loader": "^13.0.2",
+    "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
