--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "lint-staged",
+    "pre-commit": "prettier .  --write"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
+    "@vee-validate/zod": "^4.6.6",
     "axios": "^0.27.2",
     "laravel-vue-pagination": "^3.0.0",
     "pinia": "^2.0.18",
+    "pinia-plugin-persist": "^1.0.0",
     "vee-validate": "^4.6.6",
     "vue": "^3.2.37",
     "vue-query": "^1.25.2",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "zod": "^3.10.0-beta.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
@@ -30,6 +35,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "bootstrap": "^5.2.0",
+    "concurrently": "^7.3.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.3.0",
@@ -43,6 +49,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-nightwatch": "^0.2.12",
     "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0",
+    "vue-eslint-parser": "^9.0.3",
     "vue-tsc": "^0.39.5"
   },
   "lint-staged": {
