--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,14 @@
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
+    "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": false,
     "esModuleInterop": true,
+    "useUnknownInCatchVariables": false,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "types": ["node", "vite/cli", "pinia-plugin-persist"],
+    "types": ["node", "vite/client", "pinia-plugin-persist"],
     "paths": {
       "@/*": ["./src/*"]
     }
